<feat: Updated plugin CI and schema gen>